extra memory cost updated

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </div>
                 <div class="my-3">
                     <h2 class="text-md font-bold mx-3">Memory</h2>
-                    <button class=" text-sm p-2 mx-2 border rounded-lg">8GB unified memory</button>
-                    <button class=" text-sm p-2 mx-2 border rounded-lg">16GB unified memory</button>
+                    <button id="8gb-btn" class=" text-sm p-2 mx-2 border rounded-lg">8GB unified memory</button>
+                    <button id="16gb-btn" class=" text-sm p-2 mx-2 border rounded-lg">16GB unified memory</button>
                 </div>
                 <div class="my-3">
                     <h2 class="text-md font-bold mx-3">Storage</h2>
@@ -64,11 +64,11 @@
                      <div class="">
                         <h5 class="text-md font-bold p-1 my-2">$<span id="subtotal">1299</span></h5>
                         <hr class="w-1/5">
-                        <h5 class="text-md font-bold p-1 my-2">$<span id="text">0</span></h5>
+                        <h5 class="text-md font-bold p-1 my-2">$<span id="memory-cost">0</span></h5>
                         <hr class="w-1/5  border border-gray-200 ">
-                        <h5 class="text-md font-bold p-1 my-2">$<span id="total-price">0</span></h5>
+                        <h5 id="storage-cost" class="text-md font-bold p-1 my-2">$<span id="total-price">0</span></h5>
                         <hr class="w-1/5  border border-gray-300 ">
-                        <h5 class="text-md font-bold p-1 my-2">$<span id="total-price">0</span></h5>
+                        <h5 id="delivery-charge" class="text-md font-bold p-1 my-2">$<span id="total-price">0</span></h5>
                         <hr class="w-1/5  border border-gray-400 ">
                         <h5 class="text-md font-bold p-1 my-2">$<span id="total-price">1299</span></h5>
                         <hr class="w-1/5">
