storage and delivery cost updated

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 </div>
                 <div class="my-3">
                     <h2 class="text-md font-bold mx-3">Storage</h2>
-                    <button class=" text-sm p-2 mx-2 border rounded-lg">256GB SSD storage</button>
-                    <button class=" text-sm p-2 mx-2 border rounded-lg">512GB SSD storage</button>
-                    <button class=" text-sm p-2 mx-2 border rounded-lg">1TB SSD storage</button>
+                    <button id="256gb-ssd" class=" text-sm p-2 mx-2 border rounded-lg">256GB SSD storage</button>
+                    <button id="512gb-ssd" class=" text-sm p-2 mx-2 border rounded-lg">512GB SSD storage</button>
+                    <button id="1tb-ssd" class=" text-sm p-2 mx-2 border rounded-lg">1TB SSD storage</button>
                 </div>
                 <div class="my-3">
                     <h2 class="text-md font-bold mx-3">Choose your delivery option</h2>
-                    <button class=" text-sm p-2 mx-1 border rounded-lg">Friday, Aug 25 FREE Prime Delivery</button>
-                    <button class=" text-sm p-2 mx-1 border rounded-lg">Friday, Aug 21 Delivery charge $20</button>
+                    <button id="prime-delivery" class=" text-sm p-2 mx-1 border rounded-lg">Friday, Aug 25 FREE Prime Delivery</button>
+                    <button id="quick-delivery" class=" text-sm p-2 mx-1 border rounded-lg">Friday, Aug 21 Delivery charge $20</button>
                 </div>
 
                 <!-- Price Calculatte  -->
@@ -66,9 +66,9 @@
                         <hr class="w-1/5">
                         <h5 class="text-md font-bold p-1 my-2">$<span id="memory-cost">0</span></h5>
                         <hr class="w-1/5  border border-gray-200 ">
-                        <h5 id="storage-cost" class="text-md font-bold p-1 my-2">$<span id="total-price">0</span></h5>
+                        <h5 class="text-md font-bold p-1 my-2">$<span id="storage-cost">0</span></h5>
                         <hr class="w-1/5  border border-gray-300 ">
-                        <h5 id="delivery-charge" class="text-md font-bold p-1 my-2">$<span id="total-price">0</span></h5>
+                        <h5  class="text-md font-bold p-1 my-2">$<span id="delivery-charge">0</span></h5>
                         <hr class="w-1/5  border border-gray-400 ">
                         <h5 class="text-md font-bold p-1 my-2">$<span id="total-price">1299</span></h5>
                         <hr class="w-1/5">
