--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 <body>
     <main>
+
         <section class="grid grid-cols-2 gap-8 w-11/12 mx-auto mt-8">
+            <!-- Top Section  -->
             <div>
                 <img class="w-9/12 mx-auto" src="images/mac.png" alt="iMac">
             </div>
-            <div class="">
+            <div >
                 <div class="flex-1 mx-3">
                     <h1 class="text-3xl font-bold">Customize your Blue 24-inch iMac with Apple M1 chip.</h1>
                     <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores., 7-core GPU, and
@@ -28,21 +30,25 @@
                         Keyboard- US English</p>
 
                 </div>
+                
+                <!-- Feature Section -->
                 <div class="my-3">
                     <h2 class="text-md font-bold mx-3">Memory</h2>
-                    <button id="8gb-btn" class=" text-sm p-2 mx-2 border rounded-lg">8GB unified memory</button>
-                    <button id="16gb-btn" class=" text-sm p-2 mx-2 border rounded-lg">16GB unified memory</button>
+                    <button id="8gb-btn" class=" text-sm p-2 mx-2 border rounded-lg hover:bg-gray-200">8GB unified memory</button>
+                    <button id="16gb-btn" class=" text-sm p-2 mx-2 border rounded-lg hover:bg-gray-200">16GB unified memory</button>
                 </div>
                 <div class="my-3">
                     <h2 class="text-md font-bold mx-3">Storage</h2>
-                    <button id="256gb-ssd" class=" text-sm p-2 mx-2 border rounded-lg">256GB SSD storage</button>
-                    <button id="512gb-ssd" class=" text-sm p-2 mx-2 border rounded-lg">512GB SSD storage</button>
-                    <button id="1tb-ssd" class=" text-sm p-2 mx-2 border rounded-lg">1TB SSD storage</button>
+                    <button id="256gb-ssd" class=" text-sm p-2 mx-2 border rounded-lg hover:bg-gray-200">256GB SSD storage</button>
+                    <button id="512gb-ssd" class=" text-sm p-2 mx-2 border rounded-lg hover:bg-gray-200">512GB SSD storage</button>
+                    <button id="1tb-ssd" class=" text-sm p-2 mx-2 border rounded-lg hover:bg-gray-200">1TB SSD storage</button>
                 </div>
                 <div class="my-3">
                     <h2 class="text-md font-bold mx-3">Choose your delivery option</h2>
-                    <button id="prime-delivery" class=" text-sm p-2 mx-1 border rounded-lg">Friday, Aug 25 FREE Prime Delivery</button>
-                    <button id="quick-delivery" class=" text-sm p-2 mx-1 border rounded-lg">Friday, Aug 21 Delivery charge $20</button>
+                    <button id="prime-delivery" class=" text-sm p-2 mx-1 border rounded-lg hover:bg-gray-200">Friday, Aug 25 FREE Prime
+                        Delivery</button>
+                    <button id="quick-delivery" class=" text-sm p-2 mx-1 border rounded-lg hover:bg-gray-200">Friday, Aug 21 Delivery
+                        charge $20</button>
                 </div>
 
                 <!-- Price Calculatte  -->
@@ -58,31 +64,31 @@
                         <hr class="border border-gray-400">
                         <h5 class="text-md font-bold p-1 my-2">Total Price </h5>
                         <hr>
-                        
-                     </div>
 
-                     <div class="">
-                        <h5 class="text-md font-bold p-1 my-2">$<span id="subtotal">1299</span></h5>
+                    </div>
+
+                    <div class="">
+                        <h5 class="text-md font-bold p-1 my-2">$<span id="best-price">1299</span></h5>
                         <hr class="w-1/5">
                         <h5 class="text-md font-bold p-1 my-2">$<span id="memory-cost">0</span></h5>
                         <hr class="w-1/5  border border-gray-200 ">
                         <h5 class="text-md font-bold p-1 my-2">$<span id="storage-cost">0</span></h5>
                         <hr class="w-1/5  border border-gray-300 ">
-                        <h5  class="text-md font-bold p-1 my-2">$<span id="delivery-charge">0</span></h5>
+                        <h5 class="text-md font-bold p-1 my-2">$<span id="delivery-cost">0</span></h5>
                         <hr class="w-1/5  border border-gray-400 ">
                         <h5 class="text-md font-bold p-1 my-2">$<span id="total-price">1299</span></h5>
                         <hr class="w-1/5">
-                     </div>
-                     <div class="mt-8">
-                         <h6 class="font-semibold mb-2"> Add Pomo Code </h6>
-                         <input class="border p-2" type="text"> 
-                         <button class="p-2 bg-red-600 rounded-lg text-white">Apply</button>
-                     </div>
+                    </div>
+                    <div class="mt-8">
+                        <h6 class="font-semibold mb-2"> Add Pomo Code </h6>
+                        <input id="promocode-input" class="border p-2" type="text">
+                        <button id="apply-btn" class="p-2 bg-red-600 rounded-lg text-white">Apply</button>
+                    </div>
                 </div>
             </div>
         </section>
         <hr>
-        <h2 class="text-center text-4xl font-bold">Total: $1299</h2>
+        <h2 class="text-center text-4xl font-bold">Total: $<span id="total">1299</span></h2>
     </main>
 
 
